
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4215: Fix unit test failure TestParamSubPreproc and TestMacroExpansion (daijy)

PIG-4175: PIG CROSS operation follow by STORE produces non-deterministic results each run (daijy)

PIG-4202: Reset UDFContext state before OutputCommitter invocations in Tez (rohini)

PIG-4205: e2e test property-check does not check all prerequisites (kellyzly via daijy)

PIG-4180: e2e test Native_3 fail on Hadoop 2 (daijy)

PIG-4178: HCatDDL_[1-3] fail on Windows (daijy)

PIG-4046: PiggyBank DBStorage DATETIME should use setTimestamp with java.sql.Timestamp (sinchii via daijy)

PIG-4050: HadoopShims.getTaskReports() can cause OOM with Hadoop 2 (rohini)

PIG-4176: Fix tez e2e test Bloom_[1-3] (daijy)

PIG-4195: Support loading char/varchar data in OrcStorage (daijy)

PIG-4201: Native e2e tests fail when run against old version of pig (rohini)

PIG-4197: Fix typo in Job Stats header: MinMapTIme => MinMapTime (jmartell7 via daijy)

PIG-4194: ReadToEndLoader does not call setConf on pigSplit in initializeReader (shadanan via rohini)

PIG-4187: Fix Orc e2e tests (daijy)

PIG-4177: BigData_1 fail after PIG-4149 (daijy)

PIG-3507: Pig fails to run in local mode on a Kerberos enabled Hadoop cluster (kellyzly via rohini)

PIG-4171: Streaming UDF fails when direct fetch optimization is enabled (cheolsoo)

PIG-4170: Multiquery with different type of key gives wrong result (daijy)

PIG-4104: Accumulator UDF throws OOM in Tez (rohini)

PIG-4169: NPE in ConstantCalculator (cheolsoo)

PIG-4161: check for latest Hive snapshot dependencies (daijy)
